# shadowplay

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: build.yml
scripts/: fetch-binaries.sh
src/: App.tsx  ipc.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  error.rs  lib.rs  main.rs  paths.rs  sidecar.rs  state.rs
src-tauri/src/commands/: mod.rs  system.rs  transcription.rs
src-tauri/src/pipeline/: ffmpeg.rs  harvester.rs  llm_chunker.rs  mod.rs  whisper.rs  whisper_openai.rs  ytdlp.rs
src/components/: ClipList.tsx  Library.tsx  PlayerControls.tsx  ProgressView.tsx  SettingsPanel.tsx  UrlBar.tsx
src/hooks/: useSettings.ts  useShadowPlayer.ts
